v2/app/testdata/resource_sqldb_outside_ref.txt
! parse
err 'cannot reference resource svc.Moo outside the service'

-- svc/svc.go --
package svc

import (
    "context"

    "encore.dev/storage/sqldb"
)

var Moo = sqldb.Named("moo")

//encore:api public
func Foo(ctx context.Context) error {
    return nil
}
-- pkg/pkg.go --
package pkg

import (
    "context"
    "test/svc"
    
    "encore.dev/storage/sqldb"
)

func Foo() {
    _ = svc.Moo.Query
}
-- want: errors --

── Error ──────────────────────────────────────────────────────────────────────────────────[E9999]──

internal compiler error: unknown resource (path "SQLDatabase:moo")

    ╭─[ svc/svc.go:9:5 ]
    │
  7 │ )
  8 │
  9 │ var Moo = sqldb.Named("moo")
    ⋮     ────────────────────────
 10 │
 11 │ //encore:api public
────╯




── Error ──────────────────────────────────────────────────────────────────────────────────[E9999]──

internal compiler error: resource reference not found: svc.Moo

    ╭─[ pkg/pkg.go:11:9 ]
    │
  9 │
 10 │ func Foo() {
 11 │     _ = svc.Moo.Query
    ⋮         ─────────────
 12 │ }
────╯
